Fix select blocks popover z-index

--- a/intranet/static/css/eighth.admin.css
+++ b/intranet/static/css/eighth.admin.css
@@ -99,7 +99,7 @@ tr .admin-section:last-of-type:not(:first-of-type) {
     border-radius: 3px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     /* border: 1px solid rgb(129, 129, 129); */
-    z-index: 999;
+    z-index: 3;
 }
 
 .select-blocks-popover.closed {
